--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/ilgeion86/vashipirogi/issues"
   },
-  "homepage": "https://github.com/ilgeion86/vashipirogi#readme"
+  "homepage": "https://github.com/ilgeion86/vashipirogi#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "fs": "0.0.1-security"
+  },
+  "devDependencies": {
+    "ejs": "^3.1.3",
+    "nodemon": "^2.0.4"
+  }
 }
