--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/ilgeion86/vashipirogi#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "nodemailer": "^6.4.10"
   },
   "devDependencies": {
     "ejs": "^3.1.3",
