--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "node-telegram-bot-api": "^0.50.0",
     "nodemailer": "^6.4.10"
   },
   "devDependencies": {
