--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "homepage": "https://github.com/ilgeion86/vashipirogi#readme",
     "dependencies": {
+        "cookie-parser": "^1.4.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "fs": "0.0.1-security",
